# grecho

./: Cargo.toml  README.md  Settings.toml
.github/: copilot-instructions.md
src/: main.rs
