[package]
name = "grecho"
version = "1.0.0"
edition = "2021"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
clap = { version = "4.5.27", features = ["derive"] }

